--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "vite": "^5.4.20",
+    "vite-plugin-ruby": "^5.1.1"
+  }
 }
