bin/rails generate inertia:install --framework=react \     --no-typescript --package-manager=npm --no-interactive --tailwind    \     --vite --no-example-page

--- a/package.json
+++ b/package.json
@@ -13,7 +13,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "vite": "^5.4.20",
+    "vite": "^7.1.5",
     "vite-plugin-ruby": "^5.1.1"
+  },
+  "dependencies": {
+    "@inertiajs/react": "^2.1.6",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.1.13",
+    "@vitejs/plugin-react": "^5.0.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "tailwindcss": "^4.1.13"
   }
 }
